--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,35 @@ jobs:
         
       - name: Build application
         run: pnpm build
+        
+      - name: Create site artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: site
+            path: dist/www
+            retention-days: 1
+      
+  upload:
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: Download site artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: site
+            path: .
+        - name: Setup Pages
+          uses: actions/configure-pages@v5
+        - name: Upload artifact
+          uses: actions/upload-pages-artifact@v3
+          with:
+            path: "."
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
 
       # TODO:
       # - Build the application (pnpm build)
